# oreme

./: .gitignore  dune-project  oreme.opam  tasks.json
lib/: cli.ml  dune  main.ml  storage.ml  task.ml  types.ml
test/: dune
