(lang dune 3.19)

(name oreme)

(generate_opam_files true)

(source
 (github drinosan/oreme))

(authors "Author Name <sbed@protonmail.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name oreme)
 (synopsis "CLI tool for tasks")
 (description "Small learning project. The goal is to create a small CLI to create tasks and remind users for due dates")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
